# cpp-opengl-template

./: CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
source/: main.cpp
src/: glad.c  main.cpp
